# python-project-lvl4

./: .gitignore  Makefile  README.md  pyproject.toml  requirements.txt
task_manager/: settings.py  urls.py
task_manager/manager/: urls.py
task_manager/manager/locale/ru/LC_MESSAGES/: django.mo  django.po
task_manager/manager/templates/: home.html  layout.html
templates/: base.html  home.html  login.html
templates/users/: create.html  users.html
users/: forms.py  urls.py  views.py
