[tool.poetry]
name = "hexlet-code"
version = "0.1.0"
description = "task management system"
authors = ["Andrey Martsenius <artlynee@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
Django = "^3.2"
python-dotenv = "^0.17.0"
gunicorn = "^20.1.0"
dj-database-url = "^0.5.0"
psycopg2-binary = "^2.8.6"
django-bootstrap4 = "^3.0.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
